--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,13 +22,13 @@
 
     <ImageView
         android:id="@+id/imgPokemonLogo"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="180dp"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pokemon_logo" />
+        app:srcCompat="@drawable/foro_logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
