--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,13 +22,13 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="250dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="315dp"
+        android:layout_height="198dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pokemon_logo" />
+        app:srcCompat="@drawable/foro_logo" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/linearLayout"
