--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,9 +16,10 @@
     <color name="dorado">#505050</color>
     <color name="red">#FE3D00</color>
     <color name="pokebola_gray">#FF929090</color>
-
+    <color name= "purple">#8692f7</color>
     <color name="light_font">#FBFBFB</color>
     <color name="grey_font">#ff9e9e9e</color>
     <color name="text_shadow">#7F000000</color>
     <color name="text_shadow_white">#FFFFFF</color>
+
 </resources>
