Cajón de navegación(v1.0)

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/loginbkg"
-    tools:context=".ui.RegisterActivity">
+    tools:context=".ui.view.RegisterActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
