--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/loginbkg"
-    tools:context=".ui.LoginActivity">
+    tools:context=".ui.view.LoginActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
